// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toolbar/Section can be aligned 1`] = `
<section
  className="mdc-toolbar__section mdc-toolbar__section--align-start"
/>
`;

exports[`toolbar/Section can render children 1`] = `
<section
  className="mdc-toolbar__section"
>
  Children are here!
</section>
`;

exports[`toolbar/Section can return True if text automatically shrinks to fit in the available column width 1`] = `
<section
  className="mdc-toolbar__section mdc-toolbar__section--shrink-to-fit"
/>
`;
